aportacion text changed

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     
     <section class="gifts">
         <h2>Regalos</h2>
-        <p>Vuestra presencia es lo más importante para nosotros.</p>
+        <p>Si deseáis hacernos un regalo, podéis hacer una aportación.</p>
         
         <details class="gift-details">
             <summary>APORTACIÓN</summary>
